--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "devDependencies": {
     "babel-loader": "6.2.1",
     "babel-preset-es2015-webpack": "6.3.13",
+    "baggage-loader": "^0.2.4",
     "css-loader": "0.23.1",
+    "loader-utils": "^0.2.12",
     "ngtemplate-loader": "^1.3.1",
     "raw-loader": "0.5.1",
     "sass-loader": "3.1.2",
+    "source-map": "^0.5.3",
     "style-loader": "0.13.0",
     "stylus-loader": "^1.4.3",
     "webpack": "1.12.10",
