--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "angular-route": "1.4.8"
   },
   "devDependencies": {
+    "angular-mocks": "^1.4.8",
     "babel-loader": "6.2.1",
     "babel-preset-es2015-webpack": "6.3.13",
     "baggage-loader": "^0.2.4",
+    "chai": "^3.4.1",
     "css-loader": "0.23.1",
+    "karma": "^0.13.19",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.1",
+    "karma-webpack": "^1.7.0",
     "loader-utils": "^0.2.12",
+    "mocha": "^2.3.4",
     "ngtemplate-loader": "^1.3.1",
     "raw-loader": "0.5.1",
     "sass-loader": "3.1.2",
@@ -25,6 +33,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --progress --colors",
-    "build": "webpack --progress --colors"
+    "build": "webpack --progress --colors",
+    "test": "NODE_ENV=test karma start"
   }
 }
